--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp": "^3.9.0",
     "gulp-sass": "^2.1.1",
     "react": "^0.14.6",
+    "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
     "react-router": "^2.0.0-rc5",
     "superagent": "^1.7.1",
